--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Gov 50 Final Project"
-author: "Your Name Here"
+author: "Sungjoo Yoon"
 description: "My final project"
 output:
   distill::distill_article:
@@ -11,4 +11,6 @@ output:
 
 ## Project thoughts
 
-I am interested in exploring data related to...
+I am interested in exploring data related to issue prioritization within political parties, in relation to electoral outcomes.
+However, I am also interested in exploring various demographic trends within American politics today. As the final gets closer,
+I will put in more thought into narrowing it down.
