--- a/index.Rmd
+++ b/index.Rmd
@@ -1,28 +1,29 @@
 ---
-title: "Gov 50 Final Project"
+title: "Reported Sexual Violence by Precinct Income in the City of Los Angeles"
 author: "Sungjoo Yoon"
-description: "My final project"
+description: "The following report analyzes the influence of socioeconomic status on reported sexual violence within my hometown. It serves to bridge a gap in existing scholarship and aid law enforcement in allocating resources efficiently to prevent said crimes. It also serves as my final project for Gov 50!"
 output:
   distill::distill_article:
     self_contained: false
 ---
 
+## Introduction
 
+Does the socioeconomic status of a Los Angeles area/precinct influence rates of reported sexual violence? In this study, I plan to examine the extent to which affluence alters the reported frequency of crimes such as rape or intimate assault. I hypothesize that said crimes are likely to occur at a higher-reported rate within lower-income areas, relative to higher-income areas; and that values will fall along in a scalar manner. Within lower-income precincts, potential victims are seen as more vulnerable given their lack of restorative resources, and potential perpetrators may have higher rates of self-injurious, non-sexual stressors (such as drug usage, hostility towards the world, etc). My sample consists of raw crime data from the City of Los Angeles from 2020 to 2023, paired with a multitude of geographic, economic, and organizational sources (detailed under `Data and Design`). 
 
-## Project thoughts / Milestone 1
+My unit of analysis is the frequency of a reported crime of sexual violence, and the explanatory variable of interest is a defined precinct inside of the city (of which there are 21) — particularly in relation to its socioeconomic standing. The variable is coded by the name of the precinct (e.g. “N Hollywood”), while the outcome variable is the count of a reported crime of sexual violence divided by the number of individuals in a given precinct. For instance, if there were “x” amount of crimes of sexual violence divided by “y” amount of people in “z” precinct, the value “x/y” would be the area-specific frequency that we are attempting to analyze. If I were to observe greater rates of crimes of sexual violence under lower-income areas, this would provide support for my hypothesis (in essence, regression of these rates with said areas ought to provide a positive correlation). Contrarily, if I were to observe similar or lower rates of crimes of sexual violence, this would provide evidence against my original theory. Summarily -- I think this data is interesting for two primary reasons. First, no analysis of its type has been done in Los Angeles, and bridging this gap in scholarship seems worthwhile. Second, analysis of this type helps law enforcement in LA allocate appropriate resources to preventing these types of crimes, vis-a-vis describing where they are most likely to occur (i.e. predictive policing). Further analysis will help us reach those aims.
 
-Does the socioeconomic status of a Los Angeles area/precinct influence rates of reported sexual violence? In this study, I plan to examine the extent to which affluence alters the reported frequency of crimes such as rape or intimate assault. I hypothesize that said crimes are likely to occur at a higher-reported rate within lower-income areas, relative to higher-income areas; and that values will fall along in a scalar manner. Within lower-income precincts, potential victims are seen as more vulnerable given their lack of restorative resources, and potential perpetrators may have higher rates of self-injurious, non-sexual stressors (such as drug usage, hostility towards the world, etc). My sample consists of raw crime data from the City of Los Angeles from 2020 to 2023. My unit of analysis is the frequency of a reported crime of sexual violence, and the explanatory variable of interest is a defined precinct inside of the city (of which there are 21) — particularly in relation to its socioeconomic standing. The variable is coded by the name of the precinct (e.g. “N Hollywood”), while the outcome variable is the count of a reported crime of sexual violence divided by the number of individuals in a given precinct. For instance, if there were “x” amount of crimes of sexual violence divided by “y” amount of people in “z” precinct, the value “x/y” would be the area-specific frequency that we are attempting to analyze. If I were to observe greater rates of crimes of sexual violence under lower-income areas, this would provide support for my hypothesis (in essence, regression of these rates with said areas ought to provide a positive correlation). Contrarily, if I were to observe similar or lower rates of crimes of sexual violence, this would provide evidence against my original theory. 
+## Data and Design
 
-## Milestone 2
+This study is a cross-section observational study. This is because it utilizes a short, fixed period of time (2020-2023) and does not experiment, but rather observes existing data. Said data comes from a multitude of sources joined together. The first, and primary data source, is the United States Federal Government's open data site. Specifically, we are using the non-federal data set "Crime Data from 2020 to Present" for the City of Los Angeles, under a U.S. Government Works license. It can be found at (https://catalog.data.gov/dataset/crime-data-from-2020-to-present). Below — after manually removing columns irrelevant to our analysis — we've cleaned up the data further. After changing the variable name of the crime classifier for easier access, we've slimmed the data frame down to only crimes of sexual violence (by pulling all category types and filtering to said crimes), and assigned it to a new dataframe named `lacrimedata_sc`. 
 
 ```{r}
 library(readr)
 library(dplyr)
 library(ggplot2)
-lacrimedata <- read_csv("lacrimedata.csv")
-```
 
-```{r}
+lacrimedata <- read_csv("lacrimedata.csv")
+
 unique_crimes_list <- unique(lacrimedata$`Crm Cd Desc`)
 unique_areas_list <- unique(lacrimedata$`AREA NAME`)
 
@@ -43,76 +44,33 @@ lacrimedata_sc <- filter(lacrimedata, crimedesc %in% c(
   "PEEPING TOM", "BEASTIALITY, CRIME AGAINST NATURE SEXUAL ASSLT WITH ANIM", 
   "INCEST (SEXUAL ACTS BETWEEN BLOOD RELATIVES)"
 ))
-
-lacrimedata_sc
 ```
 
-Here, we've cleaned up the data further. After changing the variable name of the crime classifier for easier access, we've slimmed the data frame down to only crimes of sexual violence, and assigned it to a new dataframe named `lacrimedata_sc`.
+From then on, a multitude of secondary data sources aid us. The first is the LAPD organizational map (https://www.lapdonline.org/lapd-organization-chart/), which tells us directly which neighborhoods are under which precincts. We can pair this with the second set: US Census data of income and population, from City-Data repositories (https://www.city-data.com/). Luckily, that data exists separately for many of the 100+ neighborhoods (with adjusted estimates for 2021, an approximate midpoint of our data). However, for those neighborhoods that do not have this data, I scraped real estate market data from Niche and Weichert (two major analysts in the industry) to fill the gaps. By cross-referencing these two sets, we are able to find how many people are in each precinct, and what the average income is within a given precinct. We then `left_join` it to the primary source to have a robust repository that can take into consideration crime data and socioeconomic data (by geography). 
 
-## Milestone 3
+One benchmark of reference data is also useful here -- the United States Department of Housing and Urban Development's "Income Limits Documentation System", which informs us what the cut-off is for a 'low-income' classification (specific to the Los Angeles-Long Beach-Glendale, CA HUD Metro FMR Area). This is found at: (https://www.huduser.gov/portal/datasets/il.html). In 2021, they considered a low-income limit at 80% of the area's median household income (80,000 US dollars), which is <= 64,000 US dollars. We can invert this to create a robust classification system, where a middle-income neighborhood is any neighborhood within <20% of the median income (64,000 < 80,000 < 96,000), and high-income to be at 120%+ of the area's median income (> 96,000 USD). 
 
-```{r}
-visual1 <- lacrimedata_sc |> 
-  group_by(`AREA NAME`) |>
-  summarize(Count = n()) |>
-  ggplot(mapping = aes(x = `AREA NAME`, y = Count)) + 
-  geom_col(fill = "skyblue") + 
-  labs(x = "Area/Precinct of Los Angeles", 
-       y = "Number of Reported Cases of Sexual Violence",
-       title = "Precinct to # of Reported Cases of Sexual Violence, LA, 2020-2023")
+<sup style="font-size: 75%;">A few side notes on the secondary data, with respect to how to read it. Skip this section if you don't care for the super-specific details of how the synthesized data is coded.</sup>
 
-visual1
+<sup style="font-size: 75%;">The two secondary data sets were organized into a .csv file by me. The first column is the name of the precinct as coded in `lacrimedata_sc`. Columns 2 through 21 represent the populations of given communities that are serviced by a precinct, coded by the header `NxP`, with `x` being an integer (incremental by +1) that represents the ordinal position of the community on the LAPD organizational chart. For example, if "Arlington Heights" is the first community listed on the chart to be serviced by the `Olympic` precinct, it will show up at the intersection of `Olympic` and `N1P`. Or, if "Chesterfield Square" is the second community listed on the chart to be serviced by the `77th Street` precinct, it will show up at the intersection of `77th Street` and `N2P`. Columns 22 through 41 represent the median income of given sub-communities that are serviced by a precinct, coded by the header `NxI`, with `x` representing the same value as it did in `NxP`. This combination of data thus gives us values for all of the populations and average incomes of a given precinct's communities.</sup>
 
-```
+<sup style="font-size: 75%;">Additionally — in the instance that a neighborhood is served by multiple precincts, it was classified in the precinct within which the supermajority of the geographic plane lies.</sup>
 
-Here, we've created a preliminary barplot -- it reflects the distribution of reported crimes of sexual violence by precinct in Los Angeles. For my final project, I will need to take this a few steps further (refining the data by a per capita measure, and further grouping precincts by income) -- but I am also working on finding the right auxiliary data for that. If possible, I will also try to control for various rates of underreporting (and other reporting practices) -- if not, I will change the scope of the original project to only examine reported crimes (and acknowledge the limitations in that regard).
+<sup style="font-size: 75%;">One caveat are all of the "0" placeholder values within the data. There are 6 cases within which I chose to employ a placeholder (which functionally removes a given listed neighborhood from the analysis).</sup>
 
-## Milestone 4
+<sup style="font-size: 75%;">1) In pure business districts without substantial inhabiting populations (e.g. Ventura Business District, Terminal Island) or recreational areas without substantial residential zoning (South Park-51st & Menlo, Knollwood Country Club, Country Club Park, Park La Brea, and so on). We cannot analyze socioeconomic composition when no one lives there.</sup>
 
-For final project milestone #4, we can then refine this data both by a per capita measure, and by grouping neighborhoods by income category. Through dimensional analysis, we can get the frequency of instances of reported sexual violence grouped into low, middle, and high income groups (defined by whether or not a neighborhood reports an average household income below, around, or above the average income line). How can we do this?
+<sup style="font-size: 75%;">2) Any unincorporated community without an inhabiting population. Again, we cannot analyze socioeconomic composition when no one lives there.</sup>
 
-Methodologically, there are 21 precincts representing ~100 Los Angeles neighborhoods (as defined by LA City Council). `AREA NAME` under `lacrimedata_sc` represents these precincts, but we need auxiliary data to figure out the average income and population for each of them. The history of zoning practices in Los Angeles makes this fairly convenient -- sociological consensus is that these precincts were drawn primarily based on historic crime rates/income levels and demographic considerations. Moreover, they have not been redrawn in the duration of our data. Thus, said precincts serve as effective conduits for socioeconomic status of a sub-area (for example, the Olympic precinct consists only of Koreatown and Arlington Heights, both low-income neighborhoods with predominantly Korean and Mexican Americans; on the contrary, the West LA precinct consists of white-dominated, high-income neighborhoods such as Bel Air, Beverly Crest, Brentwood, Sawtelle, Santa Monica, etc).
+<sup style="font-size: 75%;">3) Any community listed on the LAPD organizational chart that is already accounted for by a larger community in our cross-referenced geographical data (we would not want to double-count). The list is as follows: West Van Nuys is simply considered Van Nuys, Oakwood is a part of Venice, Hillside Village/Sierra Vista are a part of El Sereno, Baldwin Village/Vista + Crenshaw are a part of Baldwin Hills, Virgil Village is a part of Hollywood, Lafayette Park is part of Westlake, La Tuna Canyon is a part of Sunland, Franklin Hills/Garvanza is a part of Los Feliz, Cahuenga Pass is a part of North Hollywood, Toluca Woods/West Toluca are a part of Toluca Lake, Universal City is a part of Studio City, Argyle/Spaulding Square/Sunset Strip/Vine are a part of Hollywood, Hobart is a part of various East Los Angeles communities, Mount Olympus is a part of the Hollywood Hills,  Brookside Park/Wilshire Center/Wilshire Vista is a part of Greater Wilshire, Miracle Mile is a part of Mid-Wilshire, Olympic Park/Wellington Square are a part of Mid-City, and South Carthay is a part of Carthay Circle.</sup>
 
-Two sets of auxiliary data help us here. The first is the LAPD organizational map, which tells us directly which neighborhoods are under which precincts. We can pair this with the second set: US Census data of income and population. Luckily, that data exists separately for many of the 100+ neighborhoods (with adjusted estimates for 2021, an approximate midpoint of our data). However, for those neighborhoods that do not have this data, a workaround is detailed further below. By cross-referencing these two sets, we are able to find how many people are in each precinct, and what the average income is within a given precinct.
+<sup style="font-size: 75%;">4) Any community that no longer exists (Aliso Village in the Hollenbeck precinct, and Village Green in Baldwin Hills). We would not want to count a non-existent neighborhood.</sup>
 
-One benchmark of reference is also useful here -- the United States Department of Housing and Urban Development's "Income Limits Documentation System", which informs us what the cut-off is for a 'low-income' classification (specific to the Los Angeles-Long Beach-Glendale, CA HUD Metro FMR Area). In 2021, they considered a low-income limit at 80% of the area's median household income (80,000 US dollars), which is <= 64,000 US dollars. We can invert this to create a robust classification system, where a middle-income neighborhood is any neighborhood within <20% of the median income (64,000 < 80,000 < 96,000), and high-income to be at 120%+ of the area's median income (> 96,000 USD).
+<sup style="font-size: 75%;">5) Any community that is a part of a public housing project, because they are considered independent communities by the organizational chart but are not statistically independent (they would be double-counted otherwise). These are Avalon Gardens inside of Green Meadows, Avalon Gardens/Hacienda Village/Imperial Courts/Jordan Downs/Parkside Manor/Gonzaque Village inside Watts, Blythe Street near North Mission Hills, Estrada Court near Aliso Village, Ramona Gardens inside Boyle Heights, and Rose Hill Courts in El Sereno.</sup>
 
-Then, we can plot the relative frequency of reported crimes of sexual violence, categorized by a precinct's socioeconomic classification, with respect to the amount of people. The formula for this is as follows: 
+<sup style="font-size: 75%;">6) Any neighborhood whose name is represented twice for reference purposes (Grammercy Park). Again, we would not want to double count these neighborhoods.</sup>
 
-\[
-\text{Freq. of Rept. Sexual Viol. Crimes by Precinct Type } i =
-\begin{cases}
-    \frac{c_i}{p_i} & \text{if classification = "low income"} \\
-    \frac{c_i}{p_i} & \text{if classification = "middle income"} \\
-    \frac{c_i}{p_i} & \text{if classification = "high income"}
-\end{cases}
-\]
-
-Where \(c_i\) represents the number of reported crimes of sexual violence, \(p_i\) represents the number of people in a given precinct, and \(\text{classification}\) is a categorical variable of class divisions.
-
-Before we get into visualization, here are a few side notes on the data to be employed.
-
-It took about 5 hours, but I scraped the LAPD organizational chart to find which communities were serviced by which precincts. I also scraped adjusted US Census data on median income and population from City-Data repositories, and scraped real estate market data from Niche and Weichert (two major analysts in the industry) to fill the gaps for communities that may not have had this data available for various reasons.
-
-This data was then organized into a .csv file by me. The first column is the name of the precinct as coded in `lacrimedata_sc`. Columns 2 through 21 represent the populations of given communities that are serviced by a precinct, coded by the header `NxP`, with `x` being an integer (incremental by +1) that represents the ordinal position of the community on the LAPD organizational chart. For example, if "Arlington Heights" is the first community listed on the chart to be serviced by the `Olympic` precinct, it will show up at the intersection of `Olympic` and `N1P`. Or, if "Chesterfield Square" is the second community listed on the chart to be serviced by the `77th Street` precinct, it will show up at the intersection of `77th Street` and `N2P`. Columns 22 through 41 represent the median income of given sub-communities that are serviced by a precinct, coded by the header `NxI`, with `x` representing the same value as it did in `NxP`. 
-
-This data thus gives us values for all of the populations and average incomes of a given precinct's communities. I plan on mutating this to create our visualizations, which I will explain beneath said graphics.
-
-One caveat are all of the "0" values within the data. There are 6 cases within which I chose to employ a placeholder.
-
-1) In pure business districts without substantial inhabiting populations (e.g. Ventura Business District, Terminal Island) or recreational areas without substantial residential zoning (South Park-51st & Menlo, Knollwood Country Club, Country Club Park, Park La Brea, and so on).
-
-2) Any unincorporated community without an inhabiting population.
-
-3) Any community listed on the LAPD organizational chart that is already accounted for by a larger community in our cross-referenced geographical data. The list is as follows: West Van Nuys is simply considered Van Nuys, Oakwood is a part of Venice, Hillside Village/Sierra Vista are a part of El Sereno, Baldwin Village/Vista + Crenshaw are a part of Baldwin Hills, Virgil Village is a part of Hollywood, Lafayette Park is part of Westlake, La Tuna Canyon is a part of Sunland, Franklin Hills/Garvanza is a part of Los Feliz, Cahuenga Pass is a part of North Hollywood, Toluca Woods/West Toluca are a part of Toluca Lake, Universal City is a part of Studio City, Argyle/Spaulding Square/Sunset Strip/Vine are a part of Hollywood, Hobart is a part of various East Los Angeles communities, Mount Olympus is a part of the Hollywood Hills,  Brookside Park/Wilshire Center/Wilshire Vista is a part of Greater Wilshire, Miracle Mile is a part of Mid-Wilshire, Olympic Park/Wellington Square are a part of Mid-City, and South Carthay is a part of Carthay Circle.
-
-4) Any community that no longer exists (Aliso Village in the Hollenbeck precinct, and Village Green in Baldwin Hills).
-
-5) Any community that is a part of a public housing project, because they are considered independent communities by the organizational chart but are not statistically independent (they would be double-counted otherwise). These are Avalon Gardens inside of Green Meadows, Avalon Gardens/Hacienda Village/Imperial Courts/Jordan Downs/Parkside Manor/Gonzaque Village inside Watts, Blythe Street near North Mission Hills, Estrada Court near Aliso Village, Ramona Gardens inside Boyle Heights, and Rose Hill Courts in El Sereno.
-
-6) Any neighborhood whose name is represented twice for reference purposes (Grammercy Park).
-
-One final side note is that in the instance that a neighborhood is served by multiple precincts, it was classified in the precinct within which the supermajority of the geographic plane lies.
+Below is the code for how I implemented the aforementioned data.
 
 ```{r}
 auxiliarydata <- read_csv("2021lapdcensus - Yoon.csv")
@@ -144,6 +102,37 @@ auxiliarydata <- left_join(auxiliarydata, incidents_by_precinct, by = "Precinct"
 auxiliarydata <- auxiliarydata |>
   mutate(freq_per_capita = count / precinct_pop)
 
+```
+
+From here (using our newly-synthesized `auxiliarydata` which accounts for a patchwork of all the previous data sets), our INDEPENDENT variable is the aggregation of the categorical variable of a precinct's socioeconomic classification (`precinct_class_grouping`), and our DEPENDENT variable is the relative frequency of reported crimes of sexual violence (`freq_per_capita`). With that cleaned data, we can also produce a basic visualization for our outcome variable. This basic visualization simply provides us what the outcome variable looks like per precinct, prior to the main analysis.
+
+```{r}
+freqvis <- auxiliarydata |>
+  ggplot(mapping = aes(x = Precinct)) + 
+  geom_col(mapping = aes(y = freq_per_capita)) +
+  labs(y = "Rept. Crimes of Sexual Violence per Capita",
+       title = "Rept. Crimes of Sexual Violence per Capita by Precinct")
+
+freqvis
+  
+```
+
+## Results
+
+Further, we can now utilize this data for a barplot visualization. We can plot the relative frequency of reported crimes of sexual violence, categorized by a precinct's socioeconomic classification, with respect to the amount of people. The formula for this is as follows: 
+
+\[
+\text{Freq. of Rept. Sexual Viol. Crimes by Precinct Type } i =
+\begin{cases}
+    \frac{c_i}{p_i} & \text{if classification = "low income"} \\
+    \frac{c_i}{p_i} & \text{if classification = "middle income"} \\
+    \frac{c_i}{p_i} & \text{if classification = "high income"}
+\end{cases}
+\]
+
+Where \(c_i\) represents the number of reported crimes of sexual violence, \(p_i\) represents the number of people in a given precinct, and \(\text{classification}\) is a categorical variable of class divisions. Below is the code utilized to implement this.
+
+```{r}
 visualizer_df <- auxiliarydata |>
   group_by(precinct_class_grouping) |>
   summarize(crimes_sum = sum(count),
@@ -160,7 +149,13 @@ secondvisualizer <- visualizer_df |>
        caption = "Sources: US Census/City-Data, LAPD Organizational Chart, LA Crime Data 2020-23, Niche, Weichert")
 
 secondvisualizer
-  
 ```
 
-Here (after compiling precinct demographics), we have now granulated the data per capita, categorized by income group. And we can notice that 'reported crimes of sexual violence per capita' are demonstrably higher in Los Angeles precincts that are low-income. Middle and high income precincts are closer to each other, but high income precincts actually report higher levels of said crimes. Going back to the original question, it does seem like income category has a bearing on the frequency of these reported crimes. Thus, we are one step closer to our conclusion confirming our presumption. However, it is important to note that there is more to be done. While this is a preliminary answer, further visualizations that will A) granulate the types of reported sexual violence, B) consider limitations, C) analyze confounding factors, and D) represent the data in other forms and statistical parameters are all yet to come.
+Here (after compiling precinct demographics), we have now granulated the data per capita, categorized by income group. And we can notice that 'reported crimes of sexual violence per capita' are demonstrably higher in Los Angeles precincts that are low-income, in this initial visualization. Middle and high income precincts are closer to each other, but high income precincts actually report higher levels of said crimes. Going back to the original question, it does seem like income category has a bearing on the frequency of these reported crimes. Thus, we are one step closer to our conclusion confirming our presumption. 
+
+We can further implement regression analysis to find quantitative data on these associations. 
+
+
+
+## Conclusion
+
